--- a/index.html
+++ b/index.html
@@ -16,5 +16,22 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+
+
+    <section class="main">
+         <div>
+            <h2>Hello, I'm</h2>
+            <h3>Mohammed Almustafa</h3>
+            <h2>Graphic designer, Frontend developer, UI/UX developer</h2>
+            <a href="#projects" class="btn"></a>
+            <div class="socials">
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </div>
+         </div>
+    </section>
 </body>
 </html>
